--- a/index.html
+++ b/index.html
@@ -184,8 +184,9 @@
     <script src="button-ripple.js"></script>
     <script src="newsticker.js"></script>
     <script src="notation.js"></script>
-    <script type="module" src="impression.js"></script>
-    <script type="module" src="imp-click.js"></script>
+    <script src="bignum.js"></script>
+    <script src="impression.js"></script>
+    <script src="imp-click.js"></script>
 </body>
 
 </html>
