split the big file into smaller files

--- a/index.html
+++ b/index.html
@@ -185,8 +185,11 @@
     <script src="newsticker.js"></script>
     <script src="notation.js"></script>
     <script src="bignum.js"></script>
-    <script src="impression.js"></script>
-    <script src="imp-click.js"></script>
+    <script src="impression/imp-main.js"></script>
+    <script src="impression/imp-click.js"></script>
+    <script src="impression/imp-prestige.js"></script>
+    <script src="impression/imp-init.js"></script>
+    <script src="impression/imp-loop.js"></script>
 </body>
 
 </html>
