--- a/index.html
+++ b/index.html
@@ -185,11 +185,12 @@
     <script src="newsticker.js"></script>
     <script src="notation.js"></script>
     <script src="bignum.js"></script>
-    <script src="impression/imp-main.js"></script>
-    <script src="impression/imp-click.js"></script>
-    <script src="impression/imp-prestige.js"></script>
-    <script src="impression/imp-init.js"></script>
-    <script src="impression/imp-loop.js"></script>
+    <script src="impression/im-main.js"></script>
+    <script src="impression/im-click.js"></script>
+    <script src="impression/im-autobuyer.js"></script>
+    <script src="impression/im-prestige.js"></script>
+    <script src="impression/im-init.js"></script>
+    <script src="impression/im-loop.js"></script>
 </body>
 
 </html>
