--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta chaimet="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Secret</title>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Anuphan&display=swap');
-      * {
+
+<head>
+  <meta chaimet="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+  <title>Secret</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Anuphan&display=swap');
+
+    * {
       font-family: 'Anuphan', sans-serif;
-      }
-    </style>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body style="margin: 0; display: flex;">
-    <div class="fixed">
-      <div class="newsticker-bg" id="newstickerBg">
-        <p id="newsticker"></p>
-      </div>
-      <div style="margin: .5em; margin-top: calc(20px + .3vh); margin-bottom: calc(20px + .3vh);">
-        <div class="amount-div">
-          <p class="center">คุณมี</p>
-          <div>
-            <h1 id="imA" class="number center amount blue">0</h1>
-          </div>
-          <p class="center">im.</p>
-        </div>
-        <div class="inline" style="height: calc(14px + .3vh); margin-top: calc(8px + .3vh);">
-          <p id="imAps" class="number dark-blue">0.00</p>
-          <p>&ensp;/s</p>
-        </div>
-        <div class="space-around" style="gap: .5em; max-width: 360px; margin: auto;">
-          <button class="tablinks button" onclick="openTab(event, 'tabIm')">I</button>
-          <button class="tablinks button" onclick="openTab(event, 'tabMp')">M</button>
-        </div>
-        <button onclick="localStorage.removeItem('save')">clear save</button>
-      </div>
+    }
+  </style>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body style="margin: 0; display: flex;">
+  <div class="fixed">
+    <div class="newsticker-bg" id="newstickerBg">
+      <p id="newsticker"></p>
     </div>
-    <div class="away" id="away">
+    <div style="margin: .5em; margin-top: calc(20px + .3vh); margin-bottom: calc(20px + .3vh);">
+      <div class="amount-div">
+        <p class="center">คุณมี</p>
+        <div>
+          <h1 id="imAmount" class="center amount blue">0</h1>
+        </div>
+        <p class="center">im</p>
+      </div>
+      <div class="inline center" style="height: calc(14px + .3vh); margin-top: calc(8px + .3vh);">
+        <p id="imRate" class="dark-blue">0.00</p>
+        <p>&ensp;/s</p>
+      </div>
+      <div class="space-around" style="gap: .5em; max-width: 360px; margin: auto;">
+        <button class="tablinks button" onclick="openTab(event, 'tabIm')">I</button>
+        <button class="tablinks button" onclick="openTab(event, 'tabMp')">M</button>
+      </div>
+      <button onclick="localStorage.removeItem('save')">clear save</button>
+    </div>
+  </div>
+  <!--div class="away" id="away">
       <h2>ในขณะที่คุณไม่อยู่...</h2>
       <p>คุณได้รับจาก</p>
       <p id="imGain">(กำลังคำนวณ im ที่ได้รับขณะ offline)</p>
@@ -45,154 +48,118 @@
         <div class="bar" id="bar" style="width: 50%"></div>
       </div>
       <button class="button" id="close" disabled="true" onclick="closeWindow()">ปิดข้อความนี้</button>
-    </div>
-    <div class="main" id="main">
-      <div style="margin: .5em; margin-top: calc(210px + 2vh); max-width: 360px;">
-        <div class="tabcontent" id="tabIm">
-          <div>
-            <h2 class="center">Ims</h2>
-            <button onclick="buyMax()" class="button" style="display: block; margin-left: auto; margin-right: 5px;">
+    </div-->
+  <div class="main" id="main">
+    <div style="margin: .5em; margin-top: calc(210px + 2vh); width: 90vw; max-width: 360px;">
+      <div class="tabcontent" id="tabIm">
+        <div>
+          <h2 class="center">Ims</h2>
+          <button onclick="buyMax()" class="button" style="display: block; margin-left: auto; margin-right: 5px;">
             Buy Max
-            </button>
-            <div>
-              <div class="upgrades" id="imUp1Div">
+          </button>
+          <div>
+            <div id="ims">
+              <div class="tab" id="im1">
                 <div class="width-55">
                   <p style="margin-top: 0;">First</p>
                   <div class="space-between">
                     <div class="flex-start width-45">
-                      <p id="imUp1R" class="upgrade-rate number">x</p>
-                      <p class="upgrade-rate">&nbsp;×</p>
+                      <p id="im1Mult" class="tab-text">1</p>
+                      <p class="tab-text">&nbsp;×</p>
                     </div>
-                    <p id="imUp1T" class="upgrade-rate number width-45 center">0</p>
-                  </div>
+                    <p id="im1Total" class="tab-text width-45 center">0</p>
+                  </div>  
                 </div>
-                <button id="imUp1" onclick="imClick(0)" class="upgrade-button number width-40"></button>
-              </div>
-              <div class="upgrades" id="imUp2Div">
-                <div class="width-55">
-                  <p style="margin-top: 0;">Second</p>
-                  <div class="space-between">
-                    <div class="flex-start width-45">
-                      <p id="imUp2R" class="upgrade-rate number">x</p>
-                      <p class="upgrade-rate">&nbsp;×</p>
-                    </div>
-                    <p id="imUp2T" class="upgrade-rate number width-45 center">0</p>
-                  </div>
-                </div>
-                <button id="imUp2" onclick="imClick(1)" class="upgrade-button number width-40"></button>
-              </div>
-              <div class="upgrades" id="imUp3Div">
-                <div class="width-55">
-                  <p style="margin-top: 0;">Third</p>
-                  <div class="space-between">
-                    <div class="flex-start width-45">
-                      <p id="imUp3R" class="upgrade-rate number">x</p>
-                      <p class="upgrade-rate">&nbsp;×</p>
-                    </div>
-                    <p id="imUp3T" class="upgrade-rate number width-45 center">0</p>
-                  </div>
-                </div>
-                <button id="imUp3" onclick="imClick(2)" class="upgrade-button number width-40"></button>
-              </div>
-              <div class="upgrades" id="imUp4Div">
-                <div class="width-55">
-                  <p style="margin-top: 0;">Forth</p>
-                  <div class="space-between">
-                    <div class="flex-start width-45">
-                      <p id="imUp4R" class="upgrade-rate number">x</p>
-                      <p class="upgrade-rate">&nbsp;×</p>
-                    </div>
-                    <p id="imUp4T" class="upgrade-rate number width-45 center">0</p>
-                  </div>
-                </div>
-                <button id="imUp4" onclick="imClick(3)" class="upgrade-button number width-40"></button>
-              </div>
-              <div class="upgrades" id="imUp5Div">
-                <div class="width-55">
-                  <p style="margin-top: 0;">Fifth</p>
-                  <div class="space-between">
-                    <div class="flex-start width-45">
-                      <p id="imUp5R" class="upgrade-rate number">x</p>
-                      <p class="upgrade-rate">&nbsp;×</p>
-                    </div>
-                    <p id="imUp5T" class="upgrade-rate number width-45 center">0</p>
-                  </div>
-                </div>
-                <button id="imUp5" onclick="imClick(4)" class="upgrade-button number width-40"></button>
+                <button id="im1Button" onclick="imClick(1)" class="tab-button width-40">Click!</button>
               </div>
             </div>
+              
             <hr>
-            <div class="space-between" style="gap: .5em;">
-              <div class="prestige-div">
-                <p class="prestige-desc">รีเซ็ตทุก im เพื่อรับ ×2 ในทุก ๆ im</p>
-                <div>
-                  <p class="upgrade-rate prestige-rate" id="imPV1">Currently: (1)</p>
-                  <button class="button" id="imP1" onclick="prestigeClick(1)"></button>
+
+            <div class="tab-big">
+              <div class="width-55">
+                <p style="margin-top: 0;">รีเซ็ตทุกอย่างเพื่อแลกรับ Memory</p>
+                <div class="flex-start">
+                  <p class="tab-text">รับ Memory ต่อไปที่:&nbsp;</p>
+                  <p id="imPrestigeCost" class="tab-text">0</p>
                 </div>
               </div>
-              <div class="prestige-div">
-                <p class="prestige-desc">รีเซ็ตทุกอย่างที่ผ่านมาเพื่อรับ memories</p>
-                <div>
-                  <p class="upgrade-rate prestige-rate" id="imPV2">Currently: ×1</p>
-                  <button class="button" id="imP2" onclick="prestigeClick(2)"></button>
-                </div>
-              </div>
+              <button id="imPrestigeButton" onclick="imPrestigeClick()" class="tab-button width-40">0</button>
             </div>
+
             <hr>
+
             <h2 class="center">Automation</h2>
             <div>
-              <div class="upgrades">
+              <div class="tab">
                 <p class="width-40">U1</p>
                 <button class="toggle" id="imAb1T" onclick="imAbToggleClick(0)">OFF</button>
-                <button id="imAb1" onclick="imAbClick(0)" class="upgrade-button number width-40">Buy</button>
+                <button id="imAb1" onclick="imAbClick(0)" class="tab-button width-40">Buy</button>
               </div>
-              <div class="upgrades">
+              <div class="tab">
                 <p class="width-40">U2</p>
                 <button class="toggle" id="imAb2T" onclick="imAbToggleClick(1)">OFF</button>
-                <button id="imAb2" onclick="imAbClick(1)" class="upgrade-button number width-40">Buy</button>
+                <button id="imAb2" onclick="imAbClick(1)" class="tab-button width-40">Buy</button>
               </div>
-              <div class="upgrades">
+              <div class="tab">
                 <p class="width-40">U3</p>
                 <button class="toggle" id="imAb3T" onclick="imAbToggleClick(2)">OFF</button>
-                <button id="imAb3" onclick="imAbClick(2)" class="upgrade-button number width-40">Buy</button>
+                <button id="imAb3" onclick="imAbClick(2)" class="tab-button width-40">Buy</button>
               </div>
-              <div class="upgrades">
+              <div class="tab">
                 <p class="width-40">U4</p>
                 <button class="toggle" id="imAb4T" onclick="imAbToggleClick(3)">OFF</button>
-                <button id="imAb4" onclick="imAbClick(3)" class="upgrade-button number width-40">Buy</button>
+                <button id="imAb4" onclick="imAbClick(3)" class="tab-button width-40">Buy</button>
               </div>
-              <div class="upgrades">
+              <div class="tab">
                 <p class="width-40">U5</p>
                 <button class="toggle" id="imAb5T" onclick="imAbToggleClick(4)">OFF</button>
-                <button id="imAb5" onclick="imAbClick(4)" class="upgrade-button number width-40">Buy</button>
+                <button id="imAb5" onclick="imAbClick(4)" class="tab-button width-40">Buy</button>
               </div>
             </div>
           </div>
         </div>
-        <div class="tabcontent" id="tabMp">
-          <p>Hello World!</p>
+      </div>
+      <div class="tabcontent" id="tabMp">
+        <div>
+          <h2 class="center">Memory</h2>
+          <div class="inline" style="height: 1em;">
+            <p class="center">คุณมี&ensp;</p>
+            <h3 id="mpAmount" class="number center purple">0</h3>
+            <p class="center">&ensp;mp</p>
+          </div>
         </div>
       </div>
-      <select name="notation" id="notation">
-        <option onclick="selectNotation()" value="exp">สัญกรณ์</option>
-        <option onclick="selectNotation()" value="engineer">วิศวกรรม</option>
-        <option onclick="selectNotation()" value="million">ล้าน</option>
-        <option onclick="selectNotation()" value="pali">บาลี</option>
-      </select>
     </div>
-    
-    <script src="tab.js"></script>
-    <script src="button-ripple.js"></script>
-    <script src="newsticker.js"></script>
-    <script src="notation.js"></script>
-    <script src="bignum.js"></script>
-    <script src="break_eternity.js"></script>
-    <script src="variables.js"></script>
-    <script src="impression/im-main.js"></script>
-    <script src="impression/im-click.js"></script>
-    <script src="impression/im-autobuyer.js"></script>
-    <script src="impression/im-prestige.js"></script>
-    <script src="impression/im-init.js"></script>
-    <script src="impression/im-loop.js"></script>
-  </body>
+    <select name="notation" id="notation">
+      <option onclick="selectNotation()" value="exp">สัญกรณ์</option>
+      <option onclick="selectNotation()" value="engineer">วิศวกรรม</option>
+      <option onclick="selectNotation()" value="million">ล้าน</option>
+      <option onclick="selectNotation()" value="pali">บาลี</option>
+    </select>
+  </div>
+
+  <script src="tab.js"></script>
+  <script src="button-ripple.js"></script>
+  <script src="newsticker.js"></script>
+  <script src="break_eternity.js"></script>
+  <script src="notation.js"></script>
+  
+  <script src="main.js"></script>
+  <script src="im-prestige.js"></script>
+  <script src="click.js"></script>
+  <script src="loop.js"></script>
+  <script src="tutorial.js"></script>
+  <script src="init.js"></script>
+  <!--script src="bignum.js"></script-->
+  <!--
+      <script src="impression/im-main.js"></script>
+      <script src="impression/im-click.js"></script>
+      <script src="impression/im-autobuyer.js"></script>
+      <script src="impression/im-prestige.js"></script>
+      <script src="impression/im-init.js"></script>
+      <script src="impression/im-loop.js"></script>
+    -->
+</body>
+
 </html>
